Fixed issues with navbar collapsing. #4

--- a/public/styles/_layout.scss
+++ b/public/styles/_layout.scss
@@ -23,6 +23,17 @@
   margin-right: 25px;
 }
 
+@media only screen and (max-width: 900px) {
+  .divider {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  #nav-container {
+    left: 320px;
+  }
+}
+
 #social-media {
   margin-top: 25px;
 }
@@ -31,7 +42,7 @@
   margin-left: 7px;
 }
 
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 767px) {
   .navbar-collapse[aria-expanded="true"] {
     position: absolute;
     right: 0;
